Fixed logout button and search bar widths on mobile

--- a/client/src/containers/PledgeApp/components/Contacts/Contacts.css
+++ b/client/src/containers/PledgeApp/components/Contacts/Contacts.css
@@ -32,14 +32,15 @@
 #search-input-container {
   position: relative;
   max-width: 700px;
-  width: stretch;
-  margin: 20px 16px;
+  width: 100%;
+  padding: 0 16px;
+  margin: 20px 0;
   z-index: 2;
 }
 
 #search-brothers-input {
   max-width: 700px;
-  width: stretch;
+  width: 100%;
   height: 50px;
   font-size: 18px;
   background-color: var(--list-color);
